k8s/auth-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: auth-service

spec:
  selector:
    app: auth

  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

  type: ClusterIP
