k8s/product-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: product-service

spec:
  selector:
    app: product

  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002

  type: ClusterIP
