k8s/user-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: user-service

spec:
  selector:
    app: user

  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001

  type: ClusterIP
