k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: microservice-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: localhost

      http:
        paths:

          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 3000

          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 3001

          - path: /product
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 3002
